--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -7,7 +7,6 @@
         <mat-card-title>📋 Listado de Servicios</mat-card-title>
         <div>
             <button mat-raised-button color="primary" (click)="abrirFormulario()">Añadir Nuevo Servicio</button>
-            <button mat-raised-button color="primary" (click)="abrirFormulario()">Historial de servicio</button>
         </div>
       </div>
     <mat-card-content>
@@ -46,17 +45,21 @@
         <ng-container matColumnDef="estado">
           <th mat-header-cell *matHeaderCellDef> Estado </th>
           <td mat-cell *matCellDef="let servicio"> 
-            <span class="estado" [ngClass]="{'activo': servicio.estado === 'Activo', 'inactivo': servicio.estado === 'Inactivo'}">
+            <span class="estado" [ngClass]="{
+              'activo': servicio.estado === 'CONFIRMADA', 
+              'cancelada': servicio.estado === 'CANCELADA'
+            }">
               {{ servicio.estado }}
             </span>
           </td>
         </ng-container>
+        
+        
   
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef> Acciones </th>
           <td mat-cell *matCellDef="let servicio">
-            <button mat-raised-button color="primary"> Editar</button>
-            <button mat-raised-button color="primary"> Eliminar</button>
+            <button mat-raised-button color="primary" (click)="eliminarServicio(servicio.id)"> Eliminar</button>
           </td>
         </ng-container>
   
@@ -65,4 +68,43 @@
       </table>
     </mat-card-content>
   </mat-card>
+
+  <mat-card class="tabla-card">
+    <div class="header-con-boton">
+      <mat-card-title>👥 Listado de Usuarios</mat-card-title>
+      <div>
+        <button mat-raised-button color="primary" (click)="abrirFormularioUsuario()">Añadir Nuevo usuario</button>
+    </div>
+    </div>
+    <mat-card-content>
+      <table mat-table [dataSource]="usuarios" class="mat-elevation-z8 tabla-estilizada">
+  
+        <ng-container matColumnDef="nombre">
+          <th mat-header-cell *matHeaderCellDef> Nombre </th>
+          <td mat-cell *matCellDef="let usuario"> {{ usuario.nombre }} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> Email </th>
+          <td mat-cell *matCellDef="let usuario"> {{ usuario.email }} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="rol">
+          <th mat-header-cell *matHeaderCellDef> Rol </th>
+          <td mat-cell *matCellDef="let usuario"> {{ usuario.tipoUsuario }} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef> Acciones </th>
+          <td mat-cell *matCellDef="let usuario">
+            <button mat-raised-button color="primary" (click)="eliminarUsuario(usuario.id)">Eliminar</button>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsUsuarios"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsUsuarios;"></tr>
+      </table>
+    </mat-card-content>
+  </mat-card>
+  
   
