--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   <mat-card class="login-card">
-    <h1>Iniciar Sesión</h1>
+    <h1>BIENVENIDO</h1>
     <form (ngSubmit)="login()" class="login-form">
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Correo</mat-label>
